--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.7",
+    "colors": "^1.4.0",
+    "formidable": "^3.5.4",
+    "lowdb": "^7.0.1",
+    "mime-types": "^3.0.1",
+    "moment": "^2.30.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^7.0.5",
+    "nodemon": "^3.1.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "simple-git": "^3.28.0",
+    "string": "^3.3.3",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.18.3"
   },
   "scripts": {
     "start": "react-scripts start",
