--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "simple-git": "^3.28.0",
