--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.7",
     "colors": "^1.4.0",
+    "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "lowdb": "^7.0.1",
     "mime-types": "^3.0.1",
@@ -17,6 +18,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "react": "^19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
