--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
     "colors": "^1.4.0",
     "date-fns": "^4.1.0",
@@ -29,14 +30,14 @@
     "ws": "^8.18.3"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "dev": "concurrently \"npm run server\" \"npm run client\"",
-  "server": "cd server && npm run dev",
-  "client": "react-scripts start"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && npm run dev",
+    "client": "react-scripts start"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
