--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
     "colors": "^1.4.0",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lowdb": "^7.0.1",
     "mime-types": "^3.0.1",
     "moment": "^2.30.1",
